# pyspcbridge

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: release.yml
pyspcbridge/: __init__.py  area.py  const.py  door.py  output.py  panel.py  user.py  zone.py
pyspcbridge/lib/: spc_error.py  spc_http_client.py  spc_ws_client.py  utils.py  websocket.py
tests/: test_api.py
